adicionando mais conteudo ao site

--- a/html/index.html
+++ b/html/index.html
@@ -6,32 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/hollow_knight.css">
+    <link rel="stylesheet" href="../css/about.css">
     <title>Document</title>
 </head>
 
 <body>
 
     <main class="main_content">
-        <nav>
-            <div class="nav_content">
-                <ul>
+        <header>
+            <nav>
+                <div class="nav_content">
+                    <ul>
 
-                </ul>
-            </div>
-        </nav>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     </main>
-    <section class="hollow_knight">
-        <p>O hollow knight</p>
-        <div class="masks">
-            <div class="white_knight hollow">
-                <img src="../img/section_hollow/whitehollow.png" alt="" srcset="">
+    <section class="about_game">
+        <div class="titulo">
+            <p>Explorando um novo mundo</p>
+        </div>
+        <div class="timeline">
+            <div class="explore">
+                <div class="img_explore">
+                    <img src="../img/timeline/explore.png" alt="">
+                </div>
+                <div class="text_explore">
+                    <h1 class="titulo">Explore um mundo misterioso</h1>
+                    <p>Conheça um mundo onde o sol já não existe mais,</p>
+                    <p>seu papel é auxiliar Niko a trazer o sol de volta.</p>
+                    <p>Explore e deslumbre nessa aventura misteriosa junto com Niko.</p>
+                </div>
             </div>
-            <div class="black_knight hollow">
-                <img src="../img/section_hollow/blackhollow.png" alt="" srcset="">
+            <div class="amigos">
+                <div class="text_amigos">
+                    <h1>Faça novos amigos
+
+                    </h1>
+                </div>
             </div>
         </div>
     </section>
+
 
 </body>
 
