adicionando conteudo na section pc

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/pc.css">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -28,24 +30,60 @@
             <p>Explorando um novo mundo</p>
         </div>
         <div class="timeline">
-            <div class="explore">
-                <div class="img_explore">
+            <div class="explore structure">
+                <div class="img_explore default_img">
                     <img src="../img/timeline/explore.png" alt="">
                 </div>
-                <div class="text_explore">
+                <div class="text_explore default">
                     <h1 class="titulo">Explore um mundo misterioso</h1>
                     <p>Conheça um mundo onde o sol já não existe mais,</p>
                     <p>seu papel é auxiliar Niko a trazer o sol de volta.</p>
                     <p>Explore e deslumbre nessa aventura misteriosa junto com Niko.</p>
                 </div>
             </div>
-            <div class="amigos">
-                <div class="text_amigos">
-                    <h1>Faça novos amigos
-
-                    </h1>
+            <div class="amigos structure">
+                <div class="text_amigos default">
+                    <h1>Faça novos amigos</h1>
+                    <p>Resolva enigma dentro e fora do jogo </p>
+                    <p>interagindo com personagens marcantes na história.</p>
+                    <p>Desculpe, eu não sou um evoluido.</p>
+                </div>
+                <div class="img_amigos default_img">
+                    <img src="../img/timeline/ITEMS.jpg" alt="" srcset="">
                 </div>
             </div>
+            <div class="memories structure">
+                <div class="img_memories default_img">
+                    <img src="../img/timeline/memories.jpg" alt="" srcset="">
+                </div>
+                <div class="text_memories default">
+                    <h1>Desvendando memórias</h1>
+                    <p>relembre o passado de Niko, veja sua história,</p>
+                    <p>e como Niko sente saudades de seu mundo,</p>
+                    <p>um mundo tão similar ao seu.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pc">
+        <div class="area_de_trabalho">
+            <div class="icons">
+                <div class="pasta">
+                    <img src="../img/pc/pasta.jpg" alt="" srcset="">
+                </div>
+                <div class="pasta">
+                    <img src="../img/pc/oneshot.jpg" alt="" srcset="">
+                </div>
+                <div class="pasta">
+                    <img src="../img/pc/pasta (3).png" alt="" srcset="">
+                </div>
+            </div>
+            <div class="window">
+            </div>
+        </div>
+        <div class="barra_de_tarefa">
+            <p>opa</p>
+
         </div>
     </section>
 
