adicionando o javascript na hora do pc

--- a/html/index.html
+++ b/html/index.html
@@ -69,25 +69,56 @@
         <div class="area_de_trabalho">
             <div class="icons">
                 <div class="pasta">
-                    <img src="../img/pc/pasta.jpg" alt="" srcset="">
-                </div>
-                <div class="pasta">
                     <img src="../img/pc/oneshot.jpg" alt="" srcset="">
+                    <p>OneShot</p>
                 </div>
                 <div class="pasta">
-                    <img src="../img/pc/pasta (3).png" alt="" srcset="">
+                    <img src="../img/pc/pasta.jpg" alt="" srcset="">
+                    <p>Pasta</p>
+                </div>
+                <div class="pasta">
+                    <img src="../img/pc/duvida.jpg" alt="" srcset="">
+                    <p>Ajuda</p>
                 </div>
             </div>
             <div class="window">
+                <div class="barra">
+                    <div class="titulo">Friends</div>
+                    <div class="control_window">
+                        <div class="minimize control_default">
+                            <p>-</p>
+                        </div>
+                        <div class="close control_default">
+                            <p>X</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- local principal da section pc -->
+                <div class="display">
+                    <div class="sprite">
+                        <img src="../img/window/Niko_icon.png" alt="" srcset="">
+                    </div>
+                    <div class="personagem">
+                        <img src="../img/window/niko.png" alt="" srcset="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="barra_de_tarefa">
-            <p>opa</p>
+            <div class="app_atual">
+                <p>app atual</p>
+            </div>
+            <div class="hora_atual">
+                <p class="hora">00:00</p>
+                <p class="periodo"></p>
+            </div>
 
         </div>
     </section>
 
 
 </body>
+<script src="../js/pc.js"></script>
 
 </html>
