adicionando detalhe no visor

--- a/html/index.html
+++ b/html/index.html
@@ -96,8 +96,13 @@
 
                 <!-- local principal da section pc -->
                 <div class="display">
-                    <div class="sprite">
-                        <img src="../img/window/Niko_icon.png" alt="" srcset="">
+                    <div class="info">
+                        <div class="personagem_text">
+                            <p>Niko muito bonitinho</p>
+                        </div>
+                        <div class="sprite">
+                            <img src="../img/window/Niko_icon.png" alt="" srcset="">
+                        </div>
                     </div>
                     <div class="personagem">
                         <img src="../img/window/niko.png" alt="" srcset="">
