adicionando json e responsividade

--- a/html/index.html
+++ b/html/index.html
@@ -86,19 +86,30 @@
                     <div class="titulo">Friends</div>
                     <div class="control_window">
                         <div class="minimize control_default">
-                            <p>-</p>
+                            <img src="../img/pc/icon_functions/minimize-o-sinal.png" alt="" srcset="">
                         </div>
                         <div class="close control_default">
-                            <p>X</p>
+                            <img src="../img/pc/icon_functions/marca-cruzada.png" alt="" srcset="">
                         </div>
                     </div>
                 </div>
 
                 <!-- local principal da section pc -->
+                <div class="arrows">
+                    <div class="left_arrow arrow">
+                        <img src="../img/pc/icon_functions/seta-esquerda.png" alt="" srcset="">
+                    </div>
+                    <div class="right_arrow arrow">
+                        <img src="../img/pc/icon_functions/seta-direita.png" alt="" srcset="">
+                    </div>
+                </div>
                 <div class="display">
                     <div class="info">
                         <div class="personagem_text">
-                            <p>Niko muito bonitinho</p>
+                            <p>No fim de tudo, havia apenas uma esperança,</p>
+                            <p>a esperança que um dia o messias colocaria</p>
+                            <p>o novo sol na torre e traria toda luz de volta,</p>
+                            <p>para que um dia nossas vidas voltassem a como era antes.</p>
                         </div>
                         <div class="sprite">
                             <img src="../img/window/Niko_icon.png" alt="" srcset="">
