adicionando funcionabilidade no aplicativo atual

--- a/html/index.html
+++ b/html/index.html
@@ -69,15 +69,15 @@
         <div class="area_de_trabalho">
             <div class="icons">
                 <div class="pasta">
-                    <img src="../img/pc/oneshot.jpg" alt="" srcset="">
+                    <img src="../img/pc/oneshot.jpg" alt="" srcset="" class="oneshotvideo" name="OneShot">
                     <p>OneShot</p>
                 </div>
                 <div class="pasta">
-                    <img src="../img/pc/pasta.jpg" alt="" srcset="">
+                    <img src="../img/pc/pasta.jpg" alt="" srcset="" class="arquivos" name="arquivos">
                     <p>Pasta</p>
                 </div>
                 <div class="pasta">
-                    <img src="../img/pc/duvida.jpg" alt="" srcset="">
+                    <img src="../img/pc/duvida.jpg" alt="" srcset="" class="ajuda" name='ajuda'>
                     <p>Ajuda</p>
                 </div>
             </div>
@@ -123,7 +123,7 @@
         </div>
         <div class="barra_de_tarefa">
             <div class="app_atual">
-                <p>app atual</p>
+                <p class="AppUtilizado">app atual</p>
             </div>
             <div class="hora_atual">
                 <p class="hora">00:00</p>
@@ -136,5 +136,6 @@
 
 </body>
 <script src="../js/pc.js"></script>
+<script src="../js/pc_clicker.js"></script>
 
 </html>
