realizando a troca de personagens

--- a/html/index.html
+++ b/html/index.html
@@ -99,6 +99,7 @@
                     <div class="left_arrow arrow">
                         <img src="../img/pc/icon_functions/seta-esquerda.png" alt="" srcset="">
                     </div>
+
                     <div class="right_arrow arrow">
                         <img src="../img/pc/icon_functions/seta-direita.png" alt="" srcset="">
                     </div>
@@ -106,10 +107,10 @@
                 <div class="display">
                     <div class="info">
                         <div class="personagem_text">
-                            <p>No fim de tudo, havia apenas uma esperança,</p>
-                            <p>a esperança que um dia o messias colocaria</p>
-                            <p>o novo sol na torre e traria toda luz de volta,</p>
-                            <p>para que um dia nossas vidas voltassem a como era antes.</p>
+                            <div class="name">
+                                <p class="nome">Nome</p>
+                            </div>
+                            <p>No fim de tudo, havia apenas uma esperança, a esperança que um dia o messias colocaria o novo sol na torre e traria toda luz de volta, para que um dia nossas vidas voltassem a como era antes.</p>
                         </div>
                         <div class="sprite">
                             <img src="../img/window/Niko_icon.png" alt="" srcset="">
@@ -137,5 +138,6 @@
 </body>
 <script src="../js/pc.js"></script>
 <script src="../js/pc_clicker.js"></script>
+<script src="../js/MudarOpersonagem.js"></script>
 
 </html>
