--- a/html/index.html
+++ b/html/index.html
@@ -107,17 +107,17 @@
                 <div class="display">
                     <div class="info">
                         <div class="personagem_text">
-                            <div class="name">
-                                <p class="nome">Nome</p>
+                            <div class="nome">
+                                <p class="name">Nome: Niko</p>
                             </div>
-                            <p>No fim de tudo, havia apenas uma esperança, a esperança que um dia o messias colocaria o novo sol na torre e traria toda luz de volta, para que um dia nossas vidas voltassem a como era antes.</p>
+                            <p class="descricao">No fim de tudo, havia apenas uma esperança, a esperança que um dia o messias colocaria o novo sol na torre e traria toda luz de volta, para que um dia nossas vidas voltassem a como era antes.</p>
                         </div>
                         <div class="sprite">
-                            <img src="../img/window/Niko_icon.png" alt="" srcset="">
+                            <img src="../img/window/Niko_icon.png" alt="" class="icon_personagem">
                         </div>
                     </div>
                     <div class="personagem">
-                        <img src="../img/window/niko.png" alt="" srcset="">
+                        <img src="../img/window/niko.png" alt="" srcset="" class="image_personagem">
                     </div>
                 </div>
             </div>
