finalizando a section de personagens

--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="barra_de_tarefa">
             <div class="app_atual">
-                <p class="AppUtilizado">app atual</p>
+                <p class="AppUtilizado">OneShot</p>
             </div>
             <div class="hora_atual">
                 <p class="hora">00:00</p>
