retirando algumas funcionalidades

--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,9 @@
                             <div class="nome">
                                 <p class="name">Nome: Niko</p>
                             </div>
-                            <p class="descricao">No fim de tudo, havia apenas uma esperança, a esperança que um dia o messias colocaria o novo sol na torre e traria toda luz de volta, para que um dia nossas vidas voltassem a como era antes.</p>
+                            <div class="description">
+                                <p class="descricao">No fim de tudo, havia apenas uma esperança, a esperança que um dia o messias colocaria o novo sol na torre e traria toda luz de volta, para que um dia nossas vidas voltassem a como era antes.</p>
+                            </div>
                         </div>
                         <div class="sprite">
                             <img src="../img/window/Niko_icon.png" alt="" class="icon_personagem">
@@ -137,5 +139,6 @@
 <script src="../js/pc.js"></script>
 <script src="../js/pc_clicker.js"></script>
 <script src="../js/MudarOpersonagem.js"></script>
+<script src="../js/changeApp.js"></script>
 
 </html>
