--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/pc.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../img/pc/icon.png" type="image/x-icon">
+    <title>OneShot</title>
 
 </head>
 
